--- a/App/meat-management-app/package.json
+++ b/App/meat-management-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.12.1",
     "@testing-library/dom": "^10.4.1",
@@ -18,7 +19,9 @@
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
+    "react-icons": "^5.4.0",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.4",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.6"
   }
 }
